<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Activites & Buttons -->
    <string name="app_name">Who\'s Up Next?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="list_events">List Events</string>
    <string name="event_details">Event Details</string>
    <string name="add_event">Add Event</string>
    <string name="sign_out">Sign Out</string>
    <string name="attend">Attend</string>
    <string name="delete">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="submit">Submit</string>
    <string name="update_map">Update</string>
        
    <!-- Labels -->
    <string name="attending_label"><b>Attending:</b></string>
    <string name="confirm_label"><b>Confirm:</b></string>
    <string name="date_label"><b>Date:</b></string>
    <string name="details_label"><b>Details:</b></string>
    <string name="email_label"><b>Email:</b></string>
    <string name="host_label"><b>Host:</b></string>
    <string name="location_label"><b>Location:</b></string>
    <string name="name_label"><b>Name:</b></string>
    <string name="password_label"><b>Password:</b></string>
    <string name="phone_label"><b>Phone:</b></string>
    <string name="sport_label"><b>Sport:</b></string>
    <string name="time_label"><b>Time:</b></string>
    
    <!-- Other -->
    <string name="current_location">Current Location</string>
    <string name="sign_up_text">Name will be your public handle.  Email will remain private, used only for logging in.</string>

</resources>
