<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/orange">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      	android:textSize="24sp"
        android:text="@string/app_name" />
    
    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <Button 
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:onClick="signIn" />
    
    <Button 
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:onClick="signUp" />
    
    <Button
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
        android:text="@string/list_events"
        android:onClick="listEvents" />
    
    <Button
        android:id="@+id/add_event"
        android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
        android:text="@string/add_event"
        android:onClick="addEvent" />
    
    <Button
        android:id="@+id/sign_out"
        android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:onClick="signOut" />

</LinearLayout>
