<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_envet"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
	
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip" >
        <TextView
	        android:id="@+id/name_label"
	        android:text="@string/name_label"
	        android:gravity="right" />
	    
		<EditText
	        android:id="@+id/name_value"
	        android:layout_weight="1"
	        android:inputType="textCapWords" />
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip" >
		<TextView
	        android:id="@+id/date_label"
	        android:text="@string/date_label"
	        android:gravity="right" />
	    
	    <Button
	        android:id="@+id/date_value"
	        android:layout_weight="1"
	        android:onClick="showDatePickerDialog"/>
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip" >
		<TextView
	        android:id="@+id/time_label"
	        android:text="@string/time_label"
	        android:gravity="right" />
	    
	    <Button
	        android:id="@+id/time_value"
	        android:layout_weight="1"
	        android:onClick="showTimePickerDialog"/>
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip" >
		<TextView
	        android:id="@+id/sport_label"
	        android:text="@string/sport_label"
	        android:gravity="right" />
	    
	    <EditText
	        android:id="@+id/sport_value"
	        android:layout_weight="1"
	        android:inputType="textCapWords" />
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip" >
		<TextView
	        android:id="@+id/location_label"
	        android:text="@string/location_label"
	        android:gravity="right" />
	    
	    <EditText
	        android:id="@+id/location_value"
	        android:layout_weight="1"
	        android:inputType="textCapWords" />
	    <Button
	        android:id="@+id/location_button"
	        android:text="@string/update_map"
	        android:onClick="updateMap"/>
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:layout_weight="2" >
		<fragment
	        android:id="@+id/location_map"
		    class="com.google.android.gms.maps.MapFragment"
	        android:layout_weight="1"
            android:layout_column="1"/>
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip" >
		<TextView
	        android:id="@+id/details_label"
	        android:text="@string/details_label"
	        android:gravity="right" />
	    
	    <EditText
	        android:id="@+id/details_value"
	        android:layout_weight="1"
	        android:inputType="textMultiLine"
        	android:singleLine="false" />
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
	    android:gravity="center" >
	    <Button
	        android:id="@+id/Submit"
	        android:text="@string/add_event"
	        android:layout_span="2"
	        android:onClick="submitEvent" />
    </TableRow>
</TableLayout>
